<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.learningaid.QuizOptionsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_select_kana_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:padding="2dp"
        android:text="Select kana"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hiragana_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="Hiragana"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_kana_label" />

    <CheckBox
        android:id="@+id/cb_a_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/a_hiragana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hiragana_label" />

    <CheckBox
        android:id="@+id/cb_ka_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ka_hiragana"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hiragana_label" />

    <CheckBox
        android:id="@+id/cb_sa_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sa_hiragana"
        app:layout_constraintStart_toStartOf="@id/cb_a_hira"
        app:layout_constraintTop_toBottomOf="@id/cb_a_hira" />

    <CheckBox
        android:id="@+id/cb_ta_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ta_hiragana"
        app:layout_constraintStart_toStartOf="@id/cb_ka_hira"
        app:layout_constraintTop_toBottomOf="@id/cb_ka_hira" />

    <CheckBox
        android:id="@+id/cb_na_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/na_hiragana"
        app:layout_constraintStart_toStartOf="@id/cb_sa_hira"
        app:layout_constraintTop_toBottomOf="@id/cb_sa_hira" />

    <CheckBox
        android:id="@+id/cb_ha_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ha_hiragana"
        app:layout_constraintStart_toStartOf="@id/cb_ta_hira"
        app:layout_constraintTop_toBottomOf="@id/cb_ta_hira" />

    <CheckBox
        android:id="@+id/cb_ma_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ma_hiragana"
        app:layout_constraintStart_toStartOf="@id/cb_na_hira"
        app:layout_constraintTop_toBottomOf="@id/cb_na_hira" />

    <CheckBox
        android:id="@+id/cb_ya_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ya_hiragana"
        app:layout_constraintStart_toStartOf="@id/cb_ha_hira"
        app:layout_constraintTop_toBottomOf="@id/cb_ha_hira" />

    <CheckBox
        android:id="@+id/cb_ra_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ra_hiragana"
        app:layout_constraintStart_toStartOf="@id/cb_ma_hira"
        app:layout_constraintTop_toBottomOf="@id/cb_ma_hira" />

    <CheckBox
        android:id="@+id/cb_wa_n_hira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/wa_n_hiragana"
        app:layout_constraintStart_toStartOf="@id/cb_ya_hira"
        app:layout_constraintTop_toBottomOf="@id/cb_ya_hira" />

    <TextView
        android:id="@+id/tv_katakana_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Katakana"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintTop_toBottomOf="@id/cb_ra_hira"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_hiragana_label"/>
    
    <CheckBox
        android:id="@+id/cb_a_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_katakana"
        app:layout_constraintTop_toBottomOf="@id/tv_katakana_label"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"/>
    <CheckBox
        android:id="@+id/cb_ka_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ka_katakana"
        app:layout_constraintTop_toBottomOf="@id/tv_katakana_label"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"/>
    <CheckBox
        android:id="@+id/cb_sa_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sa_katakana"
        app:layout_constraintTop_toBottomOf="@id/cb_a_kata"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/cb_a_kata"/>
    <CheckBox
        android:id="@+id/cb_ta_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ta_katakana"
        app:layout_constraintTop_toBottomOf="@id/cb_ka_kata"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/cb_ka_kata"/>
    <CheckBox
        android:id="@+id/cb_na_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na_katakana"
        app:layout_constraintTop_toBottomOf="@id/cb_sa_kata"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/cb_sa_kata"/>
    <CheckBox
        android:id="@+id/cb_ha_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ha_katakana"
        app:layout_constraintTop_toBottomOf="@id/cb_ta_kata"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/cb_ta_kata"/>
    <CheckBox
        android:id="@+id/cb_ma_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma_katakana"
        app:layout_constraintTop_toBottomOf="@id/cb_na_kata"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/cb_na_kata"/>
    <CheckBox
        android:id="@+id/cb_ya_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya_katakana"
        app:layout_constraintTop_toBottomOf="@id/cb_ha_kata"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/cb_ha_kata"/>
    <CheckBox
        android:id="@+id/cb_ra_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ra_katakana"
        app:layout_constraintTop_toBottomOf="@id/cb_ma_kata"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/cb_ma_kata"/>
    <CheckBox
        android:id="@+id/cb_wa_n_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wa_n_katakana"
        app:layout_constraintTop_toBottomOf="@id/cb_ya_kata"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/cb_ya_kata"/>

    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Begin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>
