<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:orientation="vertical">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_kana_practice"
        android:onClick="onClickPracticeKana"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_course_content"
        android:onClick="onClickCourseContent"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_practice_content"
        android:onClick="onClickPracticeContent"/>

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="16dp">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_lessons"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</LinearLayout>